--- a/style.css
+++ b/style.css
@@ -593,9 +593,9 @@ iframe{
 
 #myBtn{
   padding: 0.5% 0.7% 0.5% 0.7%;
-  background-color: #f9768a;
+  background-color: #f97676;
   border-radius: 3px;
-  border: 2.5px solid #f9768a;
+  border: 2.5px solid #f97676;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   color: white;
@@ -604,9 +604,9 @@ iframe{
 
 #myBtn1{
   padding: 0.5% 0.7% 0.5% 0.7%;
-  background-color: #f9768a;
+  background-color: #f976dd;
   border-radius: 3px;
-  border: 2.5px solid #f9768a;
+  border: 2.5px solid #f976dd;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   color: white;
@@ -615,9 +615,9 @@ iframe{
 
 #myBtn2{
   padding: 0.5% 0.7% 0.5% 0.7%;
-  background-color: #f9768a;
+  background-color: #9b76f9;
   border-radius: 3px;
-  border: 2.5px solid #f9768a;
+  border: 2.5px solid #9b76f9;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   color: white;
@@ -626,9 +626,9 @@ iframe{
 
 #myBtn3{
   padding: 0.5% 0.7% 0.5% 0.7%;
-  background-color: #f9768a;
+  background-color: #59a9ff;
   border-radius: 3px;
-  border: 2.5px solid #f9768a;
+  border: 2.5px solid #59a9ff;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   color: white;
