--- a/style.css
+++ b/style.css
@@ -194,6 +194,10 @@ h3{
   margin-right: 1.5%;
 }
 
+.ig img{
+  width: 35px;
+}
+
 .social-icons img{
   text-align: center;
   display: inline-block;
@@ -224,6 +228,11 @@ h3{
 .titles{
   text-align: center;
 }
+
+.titles h2{
+  font-size: 16px; 
+}
+
 .centered-half{
   margin-left: 30%;
 }
@@ -771,3 +780,85 @@ iframe{
   transition: 0.4s ease-in-out;
 }
 
+
+
+
+
+
+
+/* MOBILE RESPONSIVE */
+@media (max-width: 1170px){
+  .start h1{
+    font-size: 35px;
+  }
+
+  .start h3{
+    font-size: 15.5px;
+  }
+
+  .start h2{
+    font-size: 22px;
+  }
+
+  .start-btn1{
+    padding: 2% 2.3% 2% 2.3%;
+    font-size: 14px;
+}
+  .start-btn2{
+  padding: 2% 2.3% 2% 2.3%;
+  font-size: 14px;
+}
+  .start-btn1:hover{
+    padding: 2% 2.3% 2% 2.3%;
+    font-size: 14px;
+  }
+  .social-icon{
+    width: 28px;
+    margin-left: 2%;
+    margin-right: 1.5%;
+  }
+  .footnote p{
+    font-size: 17px;
+  }
+  .ig img{
+    width: 32px;
+  }
+
+  .titles h1{
+    font-size: 34px;
+  }
+
+  .titles h2{
+    font-size: 15px;
+  }
+
+  .xp-title h1{
+    font-size: 33px;
+  }
+
+  .xp-title button{
+    padding: 0.8% 1.5% 0.8% 1.5%;
+  }
+
+  .xp-r1-info h2{
+    font-size: 22px;
+  }
+
+  .xp-r1-info h3{
+    font-size: 16px;
+  }
+
+  .contact-me img{
+    width: 160px;
+  }
+
+  .highlight{
+    font-size: 32px;
+  }
+
+  .smaller{
+    font-size: 20px;
+  }
+
+
+}
