--- a/style.css
+++ b/style.css
@@ -885,10 +885,69 @@ iframe{
     position: absolute;
   }
 
+  .start{
+    margin-left: 10%;
+  }
+
+  .start h1{
+    font-size: 30px;
+  }
+
+  .start h2{
+    font-size: 22px;
+  }
+
+  .start h3{
+    font-size: 15px;
+  }
+
+  .profile-img{
+    width: 58%;
+  }
+
   .top{
     font-size: 32px;
   }
 
 }
 
-@
+@media (max-width: 910px){
+  .start h1{
+    font-size: 29px;
+  }
+  .start h2{
+    font-size: 21px;
+  }
+  .titles h1{
+    font-size: 30px;
+  }
+
+  .titles h2{
+    font-size: 14px;
+    width: 80%;
+  }
+
+  .navbar-links a{
+    font-size: 16px;
+  }
+
+  .michelle{
+    font-size: 18px;
+  }
+
+}
+
+@media (max-width: 885px){
+  .start h1{
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 830px){
+  .start h1{
+    font-size: 5px;
+  }
+
+  /* ADD BOOTSTRAP NAVBAR*/
+
+}
