--- a/style.css
+++ b/style.css
@@ -281,6 +281,10 @@ h3{
   border: 3px solid #fddace;  
 }
 
+.green-border{
+  border: 3px solid #92d1af;  
+}
+
 .row1-2{
   width: 47%;
   display: inline-block;
@@ -365,6 +369,18 @@ h3{
   font-size: 14px;
   font-weight: 700;
   background-image: linear-gradient(60deg, #5FB1FE,  #B17FFA);
+  border-radius: 4px;
+  padding: 1.3%;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+
+.swift{
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  font-size: 14px;
+  font-weight: 700;
+  background-image: linear-gradient(60deg, #91d68c,  #7cb8da);
   border-radius: 4px;
   padding: 1.3%;
   margin-right: 1%;
@@ -838,6 +854,7 @@ iframe{
 .roo1 p{
   font-size: 16px;
   font-weight: 200;
+  letter-spacing: 0.3px;
   line-height: 180%;
 }
 
