--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ nav{
 }
 
 .start-btn1{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   padding: 1.7% 3% 1.7% 3%;
   background-color: #E56477;
@@ -136,7 +136,7 @@ nav{
 }
 
 .start-btn1:hover{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   padding: 1.7% 3% 1.7% 3%;
   background-color: #C6596A;
@@ -148,7 +148,7 @@ nav{
 }
 
 .start-btn2{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   padding: 1.7% 3% 1.7% 3%;
   background-color: white;
@@ -312,7 +312,7 @@ h3{
 }
 
 .pink{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   padding: 1.7% 2.5% 1.7% 2.5%;
   background-color: #f9768a;
@@ -324,7 +324,7 @@ h3{
 }
 
 .green{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   padding: 1.7% 2.5% 1.7% 2.5%;
   background-color: #37be83;
@@ -336,7 +336,7 @@ h3{
 }
 
 .coral{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   padding: 1.7% 2.5% 1.7% 2.5%;
   background-color: #f98e7b;
@@ -348,7 +348,7 @@ h3{
 }
 
 .blue{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   padding: 1.7% 2.5% 1.7% 2.5%;
   background-color: #66a8db;
@@ -360,7 +360,7 @@ h3{
 }
 
 .hc{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 14px;
   font-weight: 700;
@@ -372,7 +372,7 @@ h3{
 }
 
 .js{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 14px;
   font-weight: 700;
@@ -384,7 +384,7 @@ h3{
 }
 
 .swift{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 14px;
   font-weight: 700;
@@ -396,7 +396,7 @@ h3{
 }
 
 .python{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 14px;
   font-weight: 700;
@@ -408,7 +408,7 @@ h3{
 }
 
 .aiml{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 14px;
   font-weight: 700;
@@ -421,7 +421,7 @@ h3{
 
 /* ABOUT ME */
 .twice{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 17px;
   font-weight: 700;
@@ -431,7 +431,7 @@ h3{
 }
 
 .ive{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 17px;
   font-weight: 700;
@@ -441,7 +441,7 @@ h3{
 }
 
 .svt{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 17px;
   font-weight: 700;
@@ -451,7 +451,7 @@ h3{
 }
 
 .rv{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 17px;
   font-weight: 700;
@@ -461,7 +461,7 @@ h3{
 }
 
 .txt{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   font-size: 17px;
   font-weight: 700;
@@ -471,7 +471,7 @@ h3{
 }
 
 .bullets{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 17px;
   font-weight: 580;
   color: #000000;
@@ -481,7 +481,7 @@ h3{
 
 .p1{
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 18px;
   font-weight: 600;
   color: #000000;
@@ -521,7 +521,7 @@ h3{
 }
 
 .overlay {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 15px;
   position: absolute;
   width: 100%;
@@ -592,7 +592,7 @@ iframe{
 .xp-title a{
   color: white;
   font-weight: 700;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 17px;
   text-decoration: none;
 }
@@ -656,7 +656,7 @@ iframe{
   background-color: #f97676;
   border-radius: 3px;
   border: 2.5px solid #f97676;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   color: white;
   margin-bottom: 4%;
@@ -667,7 +667,7 @@ iframe{
   background-color: #f976dd;
   border-radius: 3px;
   border: 2.5px solid #f976dd;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   color: white;
   margin-bottom: 4%;
@@ -678,7 +678,7 @@ iframe{
   background-color: #9b76f9;
   border-radius: 3px;
   border: 2.5px solid #9b76f9;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   color: white;
   margin-bottom: 4%;
@@ -689,7 +689,7 @@ iframe{
   background-color: #59a9ff;
   border-radius: 3px;
   border: 2.5px solid #59a9ff;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   color: white;
   margin-bottom: 4%;
@@ -759,7 +759,7 @@ iframe{
   background-color: #f9768a;
   border-radius: 3px;
   border: 2.5px solid #f9768a;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 700;
 }
 
@@ -771,7 +771,7 @@ iframe{
 
 
 .htxt-orange {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 800; 
   font-size: 48px; 
   color: transparent; 
@@ -781,7 +781,7 @@ iframe{
 }
 
 .htxt-blue {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 800;
   font-size: 48px;
   color: transparent; /* Make text transparent initially */
@@ -791,7 +791,7 @@ iframe{
 }
 
 .htxt-pink {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 800; /* Bold for strong outline */
   font-size: 48px; /* Adjust size as needed */
   color: transparent; /* Make text transparent initially */
@@ -801,7 +801,7 @@ iframe{
 }
 
 .htxt-coral {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 800; /* Bold for strong outline */
   font-size: 48px; /* Adjust size as needed */
   color: transparent; /* Make text transparent initially */
@@ -893,7 +893,7 @@ iframe{
   color: white;
   font-size: 15px;
   font-weight: 700;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .roo1 button:hover{
