--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ nav {
 }
 
 .menu-btn__burger {
-  width: 25px;
-  height: 3px;
+  width: 40px;
+  height: 5px;
   background: black;
   border-radius: 5px;
   transition: all .5s ease-in-out;
@@ -81,8 +81,8 @@ nav {
 .menu-btn__burger::after {
   content: '';
   position: absolute;
-  width: 25px;
-  height: 3px;
+  width: 40px;
+  height: 5px;
   background: black;
   border-radius: 5px;
   transition: all .5s ease-in-out;
@@ -127,7 +127,7 @@ nav {
     position: absolute;
     top: 50px;
     right: 10px;
-    background: white;
+    background: #ffeeff;
     padding: 20px;
     z-index: 9999;
   }
@@ -1113,8 +1113,114 @@ iframe{
     width: 46%;
     padding-left: 2%;
     padding-right: 3%;
-
+  }
+  
+  .container {
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .start {
+    margin: 7% 5% 5% 5%;
+    width: 90%;
+  }
+  
+  .start h2 {
+    font-size: 25px;
+  }
+  
+  .start h1 {
+    font-size: 48px;
+    line-height: 1.3;
+  }
+  
+  .start h3 {
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  
+  .start button {
+    margin-top: 4%;
+  }
+  
+  .profile-img {
+    width: 60%;
+    margin: 0 auto;
+    padding-top: 15%;
+  }
+  
+  .profile-img img {
+    width: 70%;
+  }
+  
+  .footnote {
+    margin-top: 5%;
+    margin-left: -2%;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .footnote p {
+    width: 100%;
+  }
+  
+  .social-icon {
+    margin: 10px;
+  }
+  
+  /* Button group styling */
+  .button-group {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
   }
 
+  /* Navigation hamburger menu styling */
+  .navbar-links {
+    display: none;
+  }
+  
+  /* Hamburger Menu Button */
+  .menu-btn {
+    display: flex !important;
+    position: absolute;
+    right: 60px;
+    top: 25px;
+    width: 55px;
+    height: 55px;
+    z-index: 1000; /* Ensure it's on top */
+    cursor: pointer;
+  }
+  
+  /* Display navbar links when toggled open */
+  .navbar-links.open {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background: #ffeeff;
+    padding: 20px;
+    z-index: 9999;
+  }
+
+  h1.top {
+    padding: 12% 5% 0 5% !important; /* Reduced padding for better alignment */
+    font-size: 28px;
+  }
+  
+  .roo1text {
+    width: 95%;
+    padding: 0 2%; 
+  }
+  
+  .roo1text p {
+    font-size: 16px;      /* Slightly smaller text for mobile */
+    line-height: 1.5;     /* Improved readability */
+    margin-right: 0;      /* Remove extra right margin */
+  }
 }
 
