--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav {
   width: calc(100% - 40px); 
   position: fixed;
   background-color: white;
-  z-index: 1;
+  z-index: 1000;
   top: 0;
   display: flex;
   justify-content: space-between;
@@ -111,7 +111,7 @@ nav {
 }
 
 /* MOBILE RESPONSIVE */
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   .navbar-links {
     display: none;
   }
@@ -129,8 +129,36 @@ nav {
     right: 10px;
     background: #ffeeff;
     padding: 20px;
-    z-index: 9999;
+    z-index: 99999999;
   }
+  @media (max-width: 1024px) {
+    .row1 {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+      width: 100% !important;
+    }
+    .row1-1,
+    .row1-2 {
+      width: 80% !important;
+      margin: 0 10% !important;
+      padding: 0 !important;
+      display: block !important;
+    }
+    .row1-1{
+      padding-bottom: 5% !important;
+    }
+
+    .centered-half {
+      width: 60% !important;
+      text-align: center;
+      padding: 0 !important;
+      margin: 5% 20% !important;
+    }
+
+  }
+
 }
 
 .menu-btn {
@@ -218,7 +246,7 @@ nav{
   width: 100%;
   position: fixed;
   background-color: white;
-  z-index: 1;
+  z-index: 1000;
   top: 0;
 }
 
@@ -349,6 +377,16 @@ nav{
   color: #C6596A;
 }
 
+.start h3{
+  width: 80%;
+  line-height: 1.5;
+  font-size: 17px;
+}
+
+.burg:hover{
+  color: #9e0000;
+}
+
 
 
 
@@ -423,6 +461,7 @@ h3{
 
 .centered-half{
   margin-left: 30%;
+  width: 40%;
 }
 
 .row1{
@@ -470,6 +509,10 @@ h3{
 
 .blue-border{
   border: 3px solid #d9f0fb;  
+}
+
+.blurp-border{
+  border: 3px solid #CFCEFE; 
 }
 
 .purp-border{
@@ -1204,7 +1247,7 @@ iframe{
     right: 20px;
     background: #ffeeff;
     padding: 20px;
-    z-index: 9999;
+    z-index: 99999999999;
   }
 
   h1.top {
@@ -1222,5 +1265,37 @@ iframe{
     line-height: 1.5;     /* Improved readability */
     margin-right: 0;      /* Remove extra right margin */
   }
+}
+
+.reflexion-swiper {
+  position: relative;
+  z-index: 0;
+}
+.reflexion-swiper .swiper-button-prev,
+.reflexion-swiper .swiper-button-next {
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 0;
+}
+
+.swiper-slide img {
+  box-sizing: border-box;
+  z-index: 0;
+}
+
+.swiper-container {
+  overflow: hidden;
+  z-index: 0;
+}
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+}
+.swiper-button-prev, .swiper-button-next {
+  color: #000; /* or another color to ensure they’re visible */
+  width: 44px;
+  height: 44px;
 }
 
