--- a/style.css
+++ b/style.css
@@ -1278,6 +1278,16 @@ iframe{
   z-index: 0;
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: #007AFE !important; /* make sure they are visible */
+  z-index: 20 !important; /* above slides */
+  opacity: 1 !important;
+  display: block !important;
+  width: 35px;
+  height: 35px;
+}
+
 .swiper-slide img {
   box-sizing: border-box;
   z-index: 0;
@@ -1293,9 +1303,5 @@ iframe{
   align-items: center;
   z-index: 0;
 }
-.swiper-button-prev, .swiper-button-next {
-  color: #000; /* or another color to ensure they’re visible */
-  width: 44px;
-  height: 44px;
-}
+
 
